--- a/manifest.json
+++ b/manifest.json
@@ -24,6 +24,6 @@
     ],
     "theme_color": "#222222",
     "background_color": "#FFFFFF",
-    "display": "standalone",
+    "display": "browser",
     "orientation": "portrait"
 }
