--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "metalsmith-permalinks": "^0.5.0"
   },
   "scripts": {
+
+
+
     "start": "node index.js",
 
-    "launch": "git push -d origin gh-pages \n git subtree push --prefix build origin gh-pages",
+    "launch": "",
 
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
